# tensor-truth

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTIC_CHAT_IMPLEMENTATION_REPORT.md  AGENTIC_CHAT_PLAN.md  AGENT_ARCHITECTURE.md  AGENT_PROGRESS.md  BROWSE_AGENT_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  PROJECTS_PLAN.md  RAG_TUNE.md  README.md  TESTING.md  TESTING_QUICKSTART.md  app.py  presets.json  pyproject.toml  pytest.ini  requirements-dev.txt  test_router_browse_agent_real.py
.agent/: context.md
.github/workflows/: tests.yml
.streamlit/: config.toml
config/: api.json  papers.json  sources.json
docs/: AGENTS.md  AGENT_TOOL_API_FOUNDATION.md  DOCKER.md  EXTENSIONS.md  INDEXES.md  PAPERS.md
extension_library/: README.md  catalog.json
extension_library/agents/: doc_researcher.yaml  github_researcher.yaml  hf_researcher.yaml
extension_library/commands/: arxiv.yaml  arxiv_paper.yaml  context7.py  context7.yaml  gh_code.yaml  gh_commits.yaml  gh_file.yaml  gh_issues.yaml  gh_pr.yaml  gh_prs.yaml  gh_repos.yaml  gh_runs.yaml  gh_search_issues.yaml  github.yaml  hf_datasets.yaml  hf_docs.yaml  hf_models.yaml  hf_papers.yaml  hf_repo.yaml  hf_spaces.yaml  huggingface.yaml  research_docs.yaml
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: chat.ts  client.ts  commands.ts  config.ts  documents.ts  extensions.ts  index.ts  mcp-servers.ts  modules.ts  pdfs.ts  projects.ts  providers.ts  rerankers.ts  sessions.ts  startup.ts  system.ts  tasks.ts  types.ts
frontend/src/hooks/: index.ts  useAutoScroll.ts  useChat.ts  useCommandDetection.ts  useCommands.ts  useConfig.ts  useDocuments.ts  useExtensions.ts  useImageAttachment.ts  useMcpServers.ts  useMediaQuery.ts  useModelActions.ts  useModules.ts  usePdfs.ts  useProjects.ts  useProviders.ts  useRerankers.ts  useScrollDirection.ts  useSessions.test.tsx  useSessions.ts  useStartup.ts  useSystemStatus.ts  useTasks.ts  useThinking.ts  useWebSocket.test.tsx  useWebSocket.ts
frontend/src/lib/: constants.ts  markdownBlockParser.ts  markdownSplitter.ts  moduleUtils.ts  utils.ts
frontend/src/stores/: chatStore.test.ts  chatStore.ts  index.ts  sessionStore.ts  uiStore.ts
frontend/src/types/: commands.ts
media/: app_styles.css
scripts/: build_all_modules.py  build_frontend.sh  check_invalid_characters.py  format.py  format.sh  generate_catalog.py  install_precommit.sh  lint.sh  normalize_math_delimiters.py  publish_to_pypi.py  rebuild_indexes_qwen.py  test.sh
src/: build_db.py  discover_curated.py  discover_papers.py  fetch_paper.py  inventory_scrape_docs.py  pipeline.py  rag_engine.py  scrape_docs.py  utils.py
src/tensortruth/: __init__.py  app.py  build_db.py  cli.py  cli_paths.py  document_index.py  fetch_paper.py  fetch_sources.py  pdf_handler.py  preset_defaults.py  rag_engine.py  scrape_docs.py  session_index.py  utils.py
src/tensortruth/agents/: __init__.py  base.py  config.py  factory.py  mcp_agent.py  server_registry.py  tool_output.py
src/tensortruth/api/: __init__.py  deps.py  main.py
src/tensortruth/app_utils/: __init__.py  app_state.py  chat_handler.py  chat_utils.py  commands.py  config.py  config_schema.py  dialogs.py  file_utils.py  helpers.py  history_cleaner.py  intent_classifier.py  logging_config.py  paths.py  presets.py  presets_ui.py  rendering.py  rendering_agent.py  rendering_debug.py  response_handler.py  service_adapters.py  session.py  setup_state.py  streaming.py  title_generation.py  vram.py
src/tensortruth/code_execution/: README.md  __init__.py  audit_logger.py  container_manager.py  executor.Dockerfile  executor.py  parser.py  session_runner.py  validator.py
src/tensortruth/core/: __init__.py  constants.py  deprecation.py  llama_cpp.py  ollama.py  prompts.py  providers.py  ranking.py  source.py  source_converter.py  source_metrics.py  source_pipeline.py  sources.py  synthesis.py  system.py  unified_sources.py
src/tensortruth/extensions/: __init__.py  errors.py  loader.py  schema.py  yaml_command.py
src/tensortruth/indexing/: __init__.py  builder.py  metadata.py  migration.py
src/tensortruth/mcp_servers/: __init__.py  __main__.py  web_tools_server.py
src/tensortruth/media/: app_styles.css
src/tensortruth/scrapers/: __init__.py  arxiv.py  book.py  doxygen.py  url_fetcher.py
src/tensortruth/services/: __init__.py  agent_service.py  builtin_tools.py  chat_history.py  chat_service.py  models.py  (+23 more)
tests/: README.md  __init__.py  conftest.py  conftest_directory_naming.py  test_config.py  test_model_pulling_integration.py
tests/integration/: __init__.py  test_api_chat.py  test_api_commands.py  test_api_config.py  test_api_documents.py  test_api_modules.py  test_api_pdfs.py  test_api_projects.py  test_api_rerankers.py  test_api_sessions.py  test_api_system.py  test_api_tasks.py  test_browse_agent_integration.py  test_build_db.py  test_context7_extension.py  test_fetch_sources.py  test_ingestion_pipeline.py  test_orchestrator_flow.py  test_pdf_ingestion_pipeline.py
tests/unit/: __init__.py  test_agent_framework.py  test_agent_service.py  test_app_utils.py  test_arxiv_handler.py  test_book_addition.py  test_browse_agent.py  test_builtin_tools.py  test_chat_history_service.py  test_chat_routes.py  test_chat_schemas.py  test_chat_service.py  test_code_parser.py  test_commands.py  test_config_inheritance.py  test_config_migration.py  test_config_service.py  test_core.py  test_core_types.py  test_directory_naming.py  test_document_index.py  test_document_service.py  test_embedding_model_selection.py  test_extension_catalog.py  test_extension_library_service.py  test_fetch_paper.py  test_fetch_sources.py  test_github_handler.py  test_helpers.py  test_history_cleaner.py  test_history_condenser.py  test_image_service.py  test_indexing_builder.py  test_intent_classifier.py  test_library_addition.py  test_link_discovery.py  test_llama_cpp.py  test_mcp_agent.py  test_mcp_integration.py  test_mcp_management_tools.py  (+37 more)
(+192 files in other folders)
